--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 header {
   width: 100%;
+  margin: 0, 0, 0, 0;
+  padding: 0;
 }
 
 header p {
@@ -18,15 +20,32 @@ header img {
   float: right;
 }
 
-.navigation {
-  padding: 20px;
-  font-family: helvetica;
-  text-align: center;
-  background-color: RoyalBlue;
+.button-group {
+  width: 100%;
+  height: 50px;
+  vertical-align: top;
+  margin: 0;
+  padding: 0;
+  text-align: left;
+}
+
+button {
+  position: relative;
+  border-right: 2px solid #999999;
+  border-bottom: 2px solid #999999;
+  border-top-width: 0px;
+  border-left-width: 0px;
+  width: 19.5%;
+  background-color: #FFD700;
+  font-size: 20px;
+  height: 50px;
+  vertical-align: top;
+  margin: 0;
+  padding: 0;
 }
 
 .navigation a {
-  padding: 20px;
+  text-decoration: none;
 }
 
 .background {
@@ -34,18 +53,23 @@ header img {
   height: 700px;
   display: block;
   position: relative;
+  text-align: center;
+  margin: 0px;
+  border-bottom: solid 15px #FFD700;
 }
 
 .large-text {
   position: absolute;
   color: #343a40;
-  margin-top: 56px;
+  margin-top: 54px;
+  margin-bottom: 20px;
   font-size: 55px;
   font-weight: bold;
   opacity: 0.3;
   font-family: helvetica;
   transform: scaleY(1.7);
   top: 0;
+  width: 100%;
 }
 
 .hero-message {
@@ -54,12 +78,15 @@ header img {
   color: #FFFFFF;
   position: relative;
   display: flex;
+  text-align: center;
 }
 
 .hero-message p {
   padding: 20px;
   font-size: 20px;
-  font-family: helvetica;
+  font-family: 'courier', helvetica;
+  margin: 0;
+  width: 100%;
 }
 
 .flex-center {
@@ -67,6 +94,7 @@ header img {
   justify-content: center;
   align-content: center;
   display: flex;
+  width: 100%;
 }
 
 .hero-message::before {
@@ -92,4 +120,17 @@ header img {
   right: 0;
   position: absolute;
   z-index: -2;
+  margin: 0px;
+}
+
+.testimonials {
+  display: flex;
+  text-align: center;
+  width: 100%;
+  justify-content: center;
+}
+
+.testimonials p {
+  padding: 20px;
+  font-family: helvetica;
 }
