--- a/style.css
+++ b/style.css
@@ -1,18 +1,19 @@
-header {
-  width: 100%;
-  margin: 0, 0, 0, 0;
-  padding: 0;
-}
-
 header p {
   display:inline-block;
-  padding: 10px;
+  padding-left: 10px;
+  padding-bottom: 0;
   font-family: helvetica;
+  font-size: 20px;
+  margin-left: 50px;
+  transform: scaleX(1);
+  font-weight: bold;
+  color: RoyalBlue;
 }
 
 header form {
   display:inline-block;
   font-family: helvetica;
+  font-size: 15px;
 }
 
 header img {
@@ -42,6 +43,8 @@ button {
   vertical-align: top;
   margin: 0;
   padding: 0;
+  font-family: helvetica;
+  color: RoyalBlue;
 }
 
 .navigation a {
@@ -128,9 +131,37 @@ button {
   text-align: center;
   width: 100%;
   justify-content: center;
+  border-bottom: solid 5px #FFD700;
 }
 
 .testimonials p {
   padding: 20px;
   font-family: helvetica;
+  text-align: center;
+  justify-content: center;
+}
+
+footer {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  position: relative;
+  margin: 0;
+}
+
+footer div {
+  display: inline;
+  padding: 25px;
+}
+
+#address {
+  font-family: helvetica;
+}
+
+#whatsapp {
+  font-family: helvetica;
+}
+
+button:hover {
+  color: RoyalBlue;
 }
